# Hacktech

./: .gitignore  pyproject.toml
client/: .gitignore  Dockerfile  cloudbuild.yaml  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.json
client/.docker/: Dockerfile
client/src/: App.tsx  Firebase.ts  index.css
client/src/api/: AuthAPI.tsx  HealthAPI.tsx
client/src/components/: FormCard.tsx  Header.tsx  Menu.tsx  Router.tsx  VisitorHeader.tsx
client/src/components/UI/: Button.tsx  Input.css  Input.tsx
client/src/layouts/: Root.tsx  Visitor.tsx
client/src/pages/: Documents.tsx  Home.tsx  Login.tsx  Request.tsx
client/src/store/: UserContext.tsx
client/src/types/: declarations.d.ts  env.d.ts
server/: .gitignore  Dockerfile  app.py  pyproject.toml  requirements.txt  start.sh
server/api/: main.py
server/api/google_fit_service/: load_data.py
server/api/routes/: auth.py  context.py  file.py  final_prompt.py  get_file.py  google_fit.py  health_report.py  medication.py  prompt.py
server/api/services/: file_service.py  user_service.py
server/data/: database.db  database.py
server/model/: answers.py  context.py  google_fit.py  health_report.py  medicamentation.py  questions.py  symptoms.py  users.py
