[tool.poetry]
name = "hacktech"
version = "0.1.0"
description = ""
authors = ["Razvi103 <bocrar@gmail.com>"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-multipart = "^0.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
