[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["rhordoan <86361164+RobertoWTBW@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.32.0"
fastapi = "^0.115.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
