[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["rhordoan <86361164+RobertoWTBW@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.32.0"
fastapi = "^0.115.3"
requests = "^2.32.3"
sqlalchemy = "^2.0.36"
python-multipart = "^0.0.12"
pypdf2 = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
